--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=CIVeng123
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.show-sql=true
